--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sharky Search</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Sharky Search</h1>
-        <input type="text" id="searchInput" placeholder="Enter your query..." />
+        <h1 class="title" id="title">Sharky Search</h1>
+        <input type="text" id="searchInput" placeholder="Type your search or URL here..." />
         <button id="searchButton">Search</button>
+        <button id="proxyButton">Proxy</button>
     </div>
     <script src="script.js"></script>
 </body>
