--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title" id="title">Sharky Search</h1>
-        <input type="text" id="searchInput" placeholder="Type your search or URL here..." />
-        <button id="searchButton">Search</button>
-        <button id="proxyButton">Proxy</button>
+        <h1>Sharky Search</h1>
+        <input type="text" id="search-input" placeholder="Type your search or URL here">
+        <button id="search-button">Search</button>
+        <div id="error-message"></div>
     </div>
     <script src="script.js"></script>
 </body>
