--- a/index.html
+++ b/index.html
@@ -15,4 +15,8 @@
     </div>
     <script src="script.js"></script>
 </body>
+    <button id="cornerButton" onclick="navigateToUrl()">My Other Websites</button>
+
+    <script src="script.js"></script>
+</body>
 </html>
