--- a/My Websites.html
+++ b/My Websites.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Fischy Websites</title>
+</head>
+<body>
+    <header>
+        <h1>Fischy Websites</h1>
+    </header>
+    <main>
+        <div class="link-container">
+            <a href="https://example1.com" target="_blank">
+                <img src="image1.jpg" alt="Example 1" class="website-image">
+                <span>Example Website 1</span>
+            </a>
+            <a href="https://example2.com" target="_blank">
+                <img src="image2.jpg" alt="Example 2" class="website-image">
+                <span>Example Website 2</span>
+            </a>
+            <a href="https://example3.com" target="_blank">
+                <img src="image3.jpg" alt="Example 3" class="website-image">
+                <span>Example Website 3</span>
+            </a>
+        </div>
+    </main>
+    <script src="scripts.js"></script>
+</body>
+</html>
