--- a/My Websites.html
+++ b/My Websites.html
@@ -13,15 +13,23 @@
     </header>
     <main>
         <div class="link-container">
-            <a href="https://example1.com" target="_blank">
+            <a href="https://fischy6734.github.io/Project-Sharky-WEB/" target="_blank">
                 <img src="image1.jpg" alt="Example 1" class="website-image">
-                <span>Example Website 1</span>
+                <span>Project Sharky WEB</span>
             </a>
-            <a href="https://example2.com" target="_blank">
+            <a href="https://fischy6734.github.io/Gameballs/" target="_blank">
                 <img src="image2.jpg" alt="Example 2" class="website-image">
-                <span>Example Website 2</span>
+                <span>Game Balls</span>
             </a>
-            <a href="https://example3.com" target="_blank">
+            <a href="https://fischy6734.github.io/Thanos-Clicker/" target="_blank">
+                <img src="image3.jpg" alt="Example 3" class="website-image">
+                <span>Thanos Clicker</span>
+            </a>
+             <a href="https://fischy6734.github.io/Squid-Game-Clicker/" target="_blank">
+                <img src="image3.jpg" alt="Example 3" class="website-image">
+                <span>Squid Game Clicker</span>
+            </a>
+             <a href="https://example3.com" target="_blank">
                 <img src="image3.jpg" alt="Example 3" class="website-image">
                 <span>Example Website 3</span>
             </a>
