--- a/My Websites.html
+++ b/My Websites.html
@@ -14,24 +14,24 @@
     <main>
         <div class="link-container">
             <a href="https://fischy6734.github.io/Project-Sharky-WEB/" target="_blank">
-                <img src="image1.jpg" alt="Example 1" class="website-image">
+                <img src="Screenshot 2025-03-10 9.51.45 AM.png" alt="Example 1" class="website-image">
                 <span>Project Sharky WEB</span>
             </a>
             <a href="https://fischy6734.github.io/Gameballs/" target="_blank">
-                <img src="image2.jpg" alt="Example 2" class="website-image">
+                <img src="Screenshot 2025-03-10 9.52.26 AM.png" alt="Example 2" class="website-image">
                 <span>Game Balls</span>
             </a>
             <a href="https://fischy6734.github.io/Thanos-Clicker/" target="_blank">
-                <img src="image3.jpg" alt="Example 3" class="website-image">
+                <img src="Screenshot 2025-03-10 9.58.52 AM.png" alt="Example 3" class="website-image">
                 <span>Thanos Clicker</span>
             </a>
              <a href="https://fischy6734.github.io/Squid-Game-Clicker/" target="_blank">
-                <img src="image3.jpg" alt="Example 3" class="website-image">
+                <img src="Screenshot 2025-03-10 9.53.29 AM.png" alt="Example 3" class="website-image">
                 <span>Squid Game Clicker</span>
             </a>
-             <a href="https://example3.com" target="_blank">
-                <img src="image3.jpg" alt="Example 3" class="website-image">
-                <span>Example Website 3</span>
+             <a href="https://fischy6734.github.io/Daddy-Clicker/" target="_blank">
+                <img src="Screenshot 2025-03-10 10.01.47 AM.png" alt="Example 3" class="website-image">
+                <span>Daddy Clicker</span>
             </a>
         </div>
     </main>
