--- a/My Websites.html
+++ b/My Websites.html
@@ -1,10 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+ <style>
+  
+body {
+background-color: #000000;
+color: #000000;
+margin: 0;
+padding: 20px; /* Added padding for better spacing */
+display: flex;
+flex-direction: column;
+align-items: center;
+min-height: 100vh; /* Ensures the body takes full height */
+overflow-y: auto; /* Allows scrolling */
+}
     <title>Fischy Websites</title>
 </head>
 <body>
